Unifi/unifi-controller-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: unifi-controller
  name: unifi-controller
  namespace: unifi
spec:
  type: NodePort
  selector:
    app: unifi-controller
  ports:
    - name: "udp-port-3478"
      port: 3478
      protocol: UDP
      targetPort: 3478
      nodePort: 30001  # Choose an available node port that doesn't conflict
    - name: "udp-port-10001"
      port: 10001
      protocol: UDP
      targetPort: 10001
      nodePort: 30002  # Choose an available node port that doesn't conflict
    - name: "http-port"
      port: 8080
      targetPort: 8080
      nodePort: 30003  # Choose an available node port that doesn't conflict
    - name: "http-port-ssl"
      port: 8081
      targetPort: 8081
      nodePort: 30004  # Choose an available node port that doesn't conflict
    - name: "https-port"
      port: 8443
      targetPort: 8443
      nodePort: 30005  # Choose an available node port that doesn't conflict
    - name: "https-port-ssl"
      port: 8843
      targetPort: 8843
      nodePort: 30006  # Choose an available node port that doesn't conflict
    - name: "http-gui-port"
      port: 8880
      targetPort: 8880
      nodePort: 30007  # Choose an available node port that doesn't conflict
    - name: "mca-port"
      port: 6789
      targetPort: 6789
      nodePort: 30008  # Choose an available node port that doesn't conflict
  externalIPs:
    - "192.168.3.23"
