Unifi/unifi-controller-ingress.yaml
# we need 2 ingresses. first to redirect from http to https and then another to skip verification of certificates
# redirect from http to https
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  namespace: unifi
  name: unifi-controller
spec:
  routes:
    - match: Host(`unifi.local`)
      kind: Rule
      services:
        - name: unifi-controller
          port: 8443
      middlewares:
        - name: redirect-https
---
# middleware to handle the redirection from http to https
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: unifi
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
# ingress for selfsigned certificate
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  namespace: unifi
  name: unifi-controller
spec:
  routes:
  - match: Host(`unifi.local`)
    kind: Rule
    services:
    - name: unifi-controller
      port: 8443
      scheme: https
      serversTransport: insecure-https
